--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,7 +27,7 @@
                         <li><a href="{{ url_for('learn_more_blooming') }}">Blooming sessions</a></li>
                         <li><a href="{{ url_for('learn_more_language_cafe') }}">Language cafe</a></li>
                         <li><a href="{{ url_for('learn_more_generations') }}">Generations at the Table</a></li>
-                        <li><a href="{{ url_for('learn_more_companies') }}">Companies – Purpose in Action</a></li>
+                        <li><a href="https://www.goodcollective.nl/">Companies – Purpose in Action</a></li>
                         <li><a href="{{ url_for('mentoring') }}">Mentoring</a></li>
                     </ul>
                 </li>
@@ -88,24 +88,6 @@
                 </div>
             </div>
         </div>
-        <!-- Collaboration section -->
-        <div class="collaboration-section">
-            <h2>We work together with</h2>
-            <div class="partners-logos">
-                <img src="{{ url_for('static', filename='images/logo_1.png') }}" alt="Partner 1">
-                <img src="{{ url_for('static', filename='images/logo_2.png') }}" alt="Partner 2">
-                <img src="{{ url_for('static', filename='images/logo_3.png') }}" alt="Partner 3">
-                <img src="{{ url_for('static', filename='images/logo_4.png') }}" alt="Partner 4">
-                <img src="{{ url_for('static', filename='images/logo_5.png') }}" alt="Partner 5">
-            </div>
-            <div class="partners-logos">
-                <img src="{{ url_for('static', filename='images/logo_6.png') }}" alt="Partner 6">
-                <img src="{{ url_for('static', filename='images/logo_7.png') }}" alt="Partner 7">
-                <img src="{{ url_for('static', filename='images/logo_8.png') }}" alt="Partner 8">
-                <img src="{{ url_for('static', filename='images/logo_9.png') }}" alt="Partner 9">
-                <img src="{{ url_for('static', filename='images/logo_10.png') }}" alt="Partner 10">
-            </div>
-        </div>
         <!-- Activities section -->
         <div class="activities-section">
             <h2 class="section-title" style="margin-left: 24px;">Upcoming activities</h2>
@@ -137,7 +119,7 @@
                     <div class="testimonial-carousel">
                         <button class="testimonial-arrow" id="testimonial-prev">&#8592;</button>
                         <div class="testimonial-cards" id="testimonial-cards">
-                            <!-- JS 渲染图片 -->
+
                         </div>
                         <button class="testimonial-arrow" id="testimonial-next">&#8594;</button>
                     </div>
@@ -197,22 +179,42 @@
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
+        <!-- Collaboration section -->
+        <div class="collaboration-section">
+            <div class="inner">
+                <h2>We work together with</h2>
+                <div class="partners-logos">
+                    <img src="{{ url_for('static', filename='images/logo_1.png') }}" alt="Partner 1">
+                    <img src="{{ url_for('static', filename='images/logo_2.png') }}" alt="Partner 2">
+                    <img src="{{ url_for('static', filename='images/logo_3.png') }}" alt="Partner 3">
+                    <img src="{{ url_for('static', filename='images/logo_4.png') }}" alt="Partner 4">
+                    <img src="{{ url_for('static', filename='images/logo_5.png') }}" alt="Partner 5">
+                </div>
+                <div class="partners-logos">
+                    <img src="{{ url_for('static', filename='images/logo_6.png') }}" alt="Partner 6">
+                    <img src="{{ url_for('static', filename='images/logo_7.png') }}" alt="Partner 7">
+                    <img src="{{ url_for('static', filename='images/logo_8.png') }}" alt="Partner 8">
+                    <img src="{{ url_for('static', filename='images/logo_9.png') }}" alt="Partner 9">
+                    <img src="{{ url_for('static', filename='images/logo_10.png') }}" alt="Partner 10">
+                </div>
+            </div>
+        </div>
         <!-- Footer section -->
         <footer class="footer-section">
             <div class="footer-inner">
                 <div class="footer-locations">
                     <div class="footer-location">
-                        <strong>The Nursery</strong><br>
+                        <strong>De Kwekerij</strong><br>
                         Nieuwe Herengracht 18<br>
                         1018 DP Amsterdam
                     </div>
                     <div class="footer-location">
-                        <strong>The Nursery</strong><br>
+                        <strong>De Kwekerij</strong><br>
                         Neude 11<br>
                         3512 AE Utrecht
                     </div>
                     <div class="footer-location">
-                        <strong>The Nursery</strong><br>
+                        <strong>De Kwekerij</strong><br>
                         's-Gravensloot 14<br>
                         3471 BM Woerden
                     </div>
