--- a/templates/learn_more_generations.html
+++ b/templates/learn_more_generations.html
@@ -26,7 +26,7 @@
                         <li><a href="{{ url_for('learn_more_blooming') }}">Blooming sessions</a></li>
                         <li><a href="{{ url_for('learn_more_language_cafe') }}">Language cafe</a></li>
                         <li><a href="{{ url_for('learn_more_generations') }}">Generations at the Table</a></li>
-                        <li><a href="{{ url_for('learn_more_companies') }}">Companies – Purpose in Action</a></li>
+                        <li><a href="https://www.goodcollective.nl/ ">Companies – Purpose in Action</a></li>
                         <li><a href="{{ url_for('mentoring') }}">Mentoring</a></li>
                     </ul>
                 </li>
