--- a/templates/mentoring.html
+++ b/templates/mentoring.html
@@ -24,7 +24,7 @@
                         <li><a href="{{ url_for('learn_more_blooming') }}">Blooming sessions</a></li>
                         <li><a href="{{ url_for('learn_more_language_cafe') }}">Language cafe</a></li>
                         <li><a href="{{ url_for('learn_more_generations') }}">Generations at the Table</a></li>
-                        <li><a href="{{ url_for('learn_more_companies') }}">Companies – Purpose in Action</a></li>
+                        <li><a href="https://www.goodcollective.nl/">Companies – Purpose in Action</a></li>
                         <li><a href="{{ url_for('mentoring') }}">Mentoring</a></li>
                     </ul>
                 </li>
@@ -133,17 +133,17 @@
     <div class="footer-inner">
         <div class="footer-locations">
             <div class="footer-location">
-                <strong>The Nursery</strong><br>
+                <strong>De Kwekerij</strong><br>
                 Nieuwe Herengracht 18<br>
                 1018 DP Amsterdam
             </div>
             <div class="footer-location">
-                <strong>The Nursery</strong><br>
+                <strong>De Kwekerij</strong><br>
                 Neude 11<br>
                 3512 AE Utrecht
             </div>
             <div class="footer-location">
-                <strong>The Nursery</strong><br>
+                <strong>De Kwekerij</strong><br>
                 's-Gravensloot 14<br>
                 3471 BM Woerden
             </div>
